load("@com_google_protobuf//upb/bazel:upb_c_proto_library.bzl", "upb_c_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_library", "zig_test")

upb_c_proto_library(
    name = "xla_data_upb",
    deps = ["@xla//xla:xla_data_proto"],
    tags = ["manual"],
)

upb_c_proto_library(
    name = "xla_compile_options_upb",
    deps = ["@xla//xla/pjrt/proto:compile_options_proto"],
    tags = ["manual"],
)

upb_c_proto_library(
    name = "profiler_options",
    deps = ["@tsl//tsl/profiler/protobuf:profiler_options_proto"],
    tags = ["manual"],
)

cc_library(
    name = "posix",
    tags = ["manual"],
    hdrs = ["posix.h"],
)

cc_library(
    name = "profiling_traceme_lib",
    tags = ["manual"],
    srcs = ["profiling/traceme_lib.cc"],
    hdrs = ["profiling/traceme.h"],
    defines = select({
        "//platforms:cuda.enabled": ["ZML_RUNTIME_CUDA"],
        "//platforms:rocm.enabled": ["ZML_RUNTIME_ROCM"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//platforms:rocm.enabled": ["-ldl"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//ffi:cc",
        "@tsl//tsl/profiler/lib:traceme",
        "@tsl//tsl/profiler/protobuf:xplane_proto_cc",
        "@xla//xla/tsl/profiler/backends/cpu:host_tracer_utils",
        "@xla//xla/tsl/profiler/backends/cpu:traceme_recorder",
        "@xla//xla/tsl/profiler/utils:time_utils",
    ] + select({
        "//platforms:cuda.enabled": [
            "@cuda_nvtx//:headers",
        ],
        "//platforms:rocm.enabled": [
            "@rocprofiler-sdk-roctx//:headers",
        ],
        "//conditions:default": [],
    }),
)

zig_library(
    name = "zml",
    tags = ["manual"],
    srcs = [
        "attention.zig",
        "attention/attention.zig",
        "attention/flashattn.zig",
        "attention/paged_attention.zig",
        "buffer.zig",
        "constants.zig",
        "dtype.zig",
        "exe.zig",
        "floats.zig",
        "io.zig",
        "mem.zig",
        "meta.zig",
        "mlirx.zig",
        "module.zig",
        "nn.zig",
        "ops.zig",
        "pjrtx.zig",
        "platform.zig",
        "profiling/profiler.zig",
        "profiling/tracer.zig",
        "safetensors.zig",
        "shape.zig",
        "sharding.zig",
        "slice.zig",
        "tensor.zig",
        "testing.zig",
        "zml.zig",
    ],
    main = "zml.zig",
    visibility = ["//visibility:public"],
    zigopts = [
        "-lc",
        "-freference-trace=20",
    ],
    deps = [
        ":posix",
        ":profiler_options",
        ":xla_compile_options_upb",
        ":xla_data_upb",
        "//bazel",
        "//ffi:zig",
        "//mlir",
        "//mlir/dialects",
        "//pjrt",
        "//platforms",
        "//stdx",
        "//tools/xspace_to_perfetto:xspace_to_perfetto_lib",
        "//upb",
        "//zml/io",
        "//zml/tokenizer",
        "@rules_zig//zig/runfiles",
        ":profiling_traceme_lib",
    ] + select({
        "//platforms:cuda.enabled": [
            "//platforms/cuda/flashattn",
        ],
        "//conditions:default": [],
    }),
)

zig_test(
    name = "test",
    deps = ["//zml"],
)
