load("@com_google_protobuf//bazel:upb_proto_library.bzl", "upb_c_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_library", "zig_test")

upb_c_proto_library(
    name = "xla_data_upb",
    deps = ["@xla//xla:xla_data_proto"],
    tags = ["manual"],
)

upb_c_proto_library(
    name = "xla_compile_options_upb",
    deps = ["@xla//xla/pjrt/proto:compile_options_proto"],
    tags = ["manual"],
)

upb_c_proto_library(
    name = "profiler_options",
    deps = ["@tsl//tsl/profiler/protobuf:profiler_options_proto"],
    tags = ["manual"],
)

cc_library(
    name = "posix",
    tags = ["manual"],
    hdrs = ["posix.h"],
)

cc_library(
    name = "profiling_traceme_lib",
    tags = ["manual"],
    srcs = ["profiling/traceme_lib.cc"],
    hdrs = ["profiling/traceme.h"],
    defines = select({
        "//platforms:cuda.enabled": ["ZML_RUNTIME_CUDA"],
        "//conditions:default": [],
    }) + select({
        "//platforms:rocm.enabled": ["ZML_RUNTIME_ROCM"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//platforms:rocm.enabled": ["-ldl"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//ffi:cc",
        "@tsl//tsl/profiler/lib:traceme",
        "@tsl//tsl/profiler/protobuf:xplane_proto_cc",
        "@xla//xla/tsl/profiler/backends/cpu:host_tracer_utils",
        "@xla//xla/tsl/profiler/backends/cpu:traceme_recorder",
        "@xla//xla/tsl/profiler/convert:post_process_single_host_xplane",
        "@xla//xla/tsl/profiler/utils:time_utils",
        "@xla//xla/tsl/profiler/utils:xplane_utils",
    ] + select({
        "//platforms:cuda.enabled": [
            "//platforms/cuda:cuda_nvtx_headers",
        ],
        "//conditions:default": [],
    }) + select({
        "//platforms:rocm.enabled": [
            "@rocprofiler-sdk-roctx//:headers",
        ],
        "//conditions:default": [],
    }),
)

zig_library(
    name = "zml",
    tags = ["manual"],
    data = [
        "moe/triton_kernels/config.json",
    ],
    srcs = [
        "attention.zig",
        "attention/attention.zig",
        "attention/attnd.zig",
        "attention/flashattn.zig",
        "attention/mosaic_tpu_kernels/ragged_attention.zig",
        "attention/paged_attention.zig",
        "attention/tpu_attention.zig",
        "attention/triton_attention.zig",
        "attention/triton_kernels/unified_attention.zig",
        "moe/fused_moe_tpu.zig",
        "moe/moe.zig",
        "moe/mosaic_tpu.zig",
        "moe/mosaic_tpu_kernels/gmm_ep.zig",
        "moe/triton.zig",
        "moe/triton_kernels/triton_kernels.zig",
        "kernel.zig",
        "buffer.zig",
        "constants.zig",
        "dtype.zig",
        "exe.zig",
        "floats.zig",
        "io.zig",
        "mem.zig",
        "meta.zig",
        "mlirx.zig",
        "module.zig",
        "nn.zig",
        "Sharding.zig",
        "ops.zig",
        "pjrtx.zig",
        "platform.zig",
        "profiling/profiler.zig",
        "profiling/tracer.zig",
        "safetensors.zig",
        "shape.zig",
        "slice.zig",
        "tensor.zig",
        "testing.zig",
        "zml.zig",
    ],
    main = "zml.zig",
    visibility = ["//visibility:public"],
    zigopts = [
        "-lc",
        "-freference-trace=20",
    ],
    deps = [
        ":posix",
        ":xla_compile_options_upb",
        ":xla_data_upb",
        "//bazel",
        "//ffi:zig",
        ":profiler_options",
        "//kernels/mosaic_tpu:mosaic_tpu_builder",
        "//kernels/triton:triton_builder",
        "//mlir",
        "//mlir/dialects",
        "//mlir/dialects/mosaic_tpu",
        "//pjrt",
        "//platforms",
        "//platforms/tpu:ragged_paged",
        "//stdx",
        "//tools/xspace_to_perfetto:xspace_to_perfetto_lib",
        "//upb",
        "//zml/io",
        "//zml/tokenizer",
        "@rules_zig//zig/runfiles",
        ":profiling_traceme_lib",
    ] + select({
        "//platforms:neuron.enabled": [
            "//platforms/neuron/topology",
        ],
        "//conditions:default": [],
    }) + select({
        "//platforms:cuda.enabled": [
            "//platforms/cuda/flashattn",
        ],
        "//conditions:default": [],
    }),
)

zig_library(
    name = "moe_mosaic_tpu_gmm_ep",
    tags = ["manual"],
    main = "moe/mosaic_tpu_kernels/gmm_ep.zig",
    import_name = "zml/moe/mosaic_tpu_kernels/gmm_ep",
    visibility = ["//visibility:public"],
    deps = [
        ":zml",
        "//kernels/mosaic_tpu:mosaic_tpu_builder",
    ],
)

zig_library(
    name = "moe_mosaic_tpu_fused_moe",
    tags = ["manual"],
    main = "moe/mosaic_tpu_kernels/fused_moe.zig",
    import_name = "zml/moe/mosaic_tpu_kernels/fused_moe",
    visibility = ["//visibility:public"],
    deps = [
        ":zml",
        "//kernels/mosaic_tpu:mosaic_tpu_builder",
        "//mlir",
        "//mlir/dialects",
        "//mlir/dialects/mosaic_tpu",
    ],
)

zig_library(
    name = "mosaic_tpu_kernel_emit_zml_shim",
    tags = ["manual"],
    main = "moe/mosaic_tpu_kernel_emit_zml_shim.zig",
    import_name = "zml",
    visibility = ["//visibility:private"],
    deps = [
        "//kernels/mosaic_tpu:mosaic_tpu_builder",
        "//mlir",
        "//mlir/dialects",
    ],
)

zig_binary(
    name = "fused_moe_tpu_emit",
    srcs = [
        "moe/fused_moe_tpu_emit.zig",
        "moe/mosaic_tpu_kernels/fused_moe.zig",
    ],
    main = "moe/fused_moe_tpu_emit.zig",
    visibility = ["//visibility:public"],
    deps = [
        ":mosaic_tpu_kernel_emit_zml_shim",
        "//kernels/mosaic_tpu:mosaic_tpu_builder",
        "//mlir",
        "//mlir/dialects",
        "//mlir/dialects/mosaic_tpu",
    ],
)


zig_test(
    name = "test",
    deps = ["//zml"],
)
