load("@com_google_protobuf//bazel:upb_proto_library.bzl", "upb_c_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_library", "zig_test")

upb_c_proto_library(
    name = "xla_data_upb",
    deps = ["@xla//xla:xla_data_proto"],
)

upb_c_proto_library(
    name = "xla_compile_options_upb",
    deps = ["@xla//xla/pjrt/proto:compile_options_proto"],
)

cc_library(
    name = "posix",
    hdrs = ["posix.h"],
)

zig_library(
    name = "zml",
    srcs = [
        "buffer.zig",
        "constants.zig",
        "dtype.zig",
        "exe.zig",
        "floats.zig",
        "io.zig",
        "meta.zig",
        "mlirx.zig",
        "module.zig",
        "nn.zig",
        "ops.zig",
        "pjrtx.zig",
        "platform.zig",
        "safetensors.zig",
        "shape.zig",
        "slice.zig",
        "tensor.zig",
        "testing.zig",
        "zml.zig",
    ],
    main = "zml.zig",
    visibility = ["//visibility:public"],
    zigopts = [
        "-lc",
        "-freference-trace=20",
    ],
    deps = [
        ":posix",
        ":xla_compile_options_upb",
        ":xla_data_upb",
        "//mlir",
        "//mlir/dialects",
        "//pjrt",
        "//runtimes",
        "//stdx",
        "//upb",
        "//zml2/tokenizer",
        "//zml2/io",
        "@rules_zig//zig/runfiles",
    ],
)

zig_binary(
    name = "main",
    args = [],
    data = [],
    main = "main.zig",
    deps = [
        "//zml2:zml",
    ],
)

zig_binary(
    name = "main_io",
    args = [],
    data = [],
    main = "main_io.zig",
    deps = [
        "//zml2:zml",
    ],
)

# All ZML Tests

zig_test(
    name = "test",
    data = [
        #"aio/torch/simple.pt",
        #"aio/torch/simple_test_4.pickle",
    ],
    test_runner = ":test_runner",
    deps = ["//zml2:zml"],
)

filegroup(
    name = "test_runner",
    srcs = ["test_runner.zig"],
    visibility = ["//visibility:public"],
)
