load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "local_execution",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "local_execution_enabled",
    flag_values = {
        ":local_execution": "true",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "local_execution_disabled",
    flag_values = {
        ":local_execution": "false",
    },
    visibility = ["//visibility:public"],
)

constraint_setting(name = "zig_execution_location")

constraint_value(
    name = "local_zig_execution",
    constraint_setting = ":zig_execution_location",
    visibility = ["//visibility:public"],
)

# Special constrained host platform that toolchain can use as exec_compatible_with
# if they want to only be used when executing on the local machine.
#
# This is currently used by Zig toolchains so that they are only resolved for
# the host platform and thus can be used for no-remote-exec actions.
platform(
    name = "local_execution_platform",
    parents = ["@platforms//host"],
    constraint_values = [":local_zig_execution"],
    visibility = ["//visibility:public"],
)
