load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

constraint_setting(name = "zig_execution_location")

constraint_value(
    name = "local_zig_execution",
    constraint_setting = ":zig_execution_location",
    visibility = ["//visibility:public"],
)

# Special constrained host platform that toolchain can use as exec_compatible_with
# if they want to only be used when executing on the local machine.
#
# This is currently used by Zig toolchains so that they are only resolved for
# the host platform and thus can be used for no-remote-exec actions.
platform(
    name = "local_execution_platform",
    parents = ["@platforms//host"],
    constraint_values = [":local_zig_execution"],
    exec_properties = {
        "no-remote-exec": "1",
    },
    visibility = ["//visibility:public"],
)
