package(default_visibility = ["//visibility:public"])

toolchain(
    name = "zig_0_16_0_aarch64_linux_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-linux//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_aarch64_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-linux//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_aarch64_macos_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-macos//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_aarch64_macos_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-macos//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_aarch64_windows_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-windows//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_aarch64_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_aarch64-windows//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_linux_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-linux//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-linux//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_macos_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-macos//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_macos_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-macos//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_windows_local_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
        "//bazel/zig_toolchain_config:local_zig_execution",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_enabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-windows//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig_0_16_0_x86_64_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    target_settings = [
        "//bazel/zig_toolchain_config:local_execution_disabled",
        "@zig_toolchains//:0.16.0",
    ],
    toolchain = "@zig_0.16.0_x86_64-windows//:zig_toolchain",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)
