load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "acestep",
    args = [
        #"//var//models//acestep//acestep-5Hz-lm-0.6B//",
        #"//var//models//acestep//acestep-5Hz-lm-0.6B//model.safetensors",
        #"//var//models//acestep//acestep-5Hz-lm-0.6B//tokenizer.json",
        #"//var//models//acestep//acestep-v15-turbo//model.safetensors",
        "//Users//sboulmier//zml//examples//acestep//models//acestep-5Hz-lm-0.6B//",
        "//Users//sboulmier//zml//examples//acestep//models//acestep-5Hz-lm-0.6B//model.safetensors",
        "//Users//sboulmier//zml//examples//acestep//models//acestep-5Hz-lm-0.6B//tokenizer.json",
        "//Users//sboulmier//zml//examples//acestep//models//acestep-5Hz-lm-0.6B//activations.safetensors",
    ],
    main = "main.zig",
    srcs = [
        "main.zig",
        "acellm.zig",
        "inference.zig",
        "aceemb.zig",
        "aceenc.zig",
        "acedit.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
        "//mlir",
        "//mlir/dialects",
    ],
)

zig_binary(
    name = "torch2zml",
    main = "torch2zml.zig",
    deps = [
        "@zml//zml",
    ],
)
