load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "acestep",
    args = [],
    main = "main.zig",
    srcs = [
        "main.zig",
        "acellm.zig",
        "inference.zig",
        "aceemb.zig",
        "aceenc.zig",
        "acedit.zig",
        "acevae.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
        "//mlir",
        "//mlir/dialects",
    ],
)

zig_binary(
    name = "torch2zml",
    main = "torch2zml.zig",
    deps = [
        "@zml//zml",
    ],
)
