load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "benchmark_profiler",
    main = "main.zig",
    deps = [
        "//third_party/pprof:pprof",
        "//zml",
        "//third_party/tracy:tracy",
    ],
    visibility = ["//visibility:public"],
)

build_test(
    name = "test",
    targets = [":benchmark_profiler"],
)
