load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//bazel:zig.bzl", "zig_cc_binary")

zig_cc_binary(
    name = "benchmark",
    main = "main.zig",
    deps = [
        "//async",
        "//stdx",
        "//zml",
    ],
)

build_test(
    name = "test",
    targets = [":benchmark"],
)
