load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "conv_compile_repro",
    main = "main.zig",
    visibility = ["//visibility:public"],
    deps = ["//zml"],
)

build_test(
    name = "test",
    targets = [":conv_compile_repro"],
)
