load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "detokenization",
    main = "main.zig",
    srcs = [
        "graph.zig",
        "inference.zig",
        "llm.zig",
        "main.zig",
        "model.zig",
        "svd.zig",
        "tokens.zig",
        "algebra.zig",
        "saveload.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
        "//mlir",
        "//mlir/dialects",
    ],
)