load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "detokenization",
    main = "main.zig",
    srcs = [
        "graph.zig",
        "inference.zig",
        "llm.zig",
        "main.zig",
        "model.zig",
        "productq.zig",
        "quantized.zig",
        "svd.zig",
        "tokens.zig",
        "algebra.zig",
        "saveload.zig",
        "sampling.zig",
        "kmeans.zig",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
        "//mlir",
        "//mlir/dialects",
    ],
)
